--- a/jest.config.json
+++ b/jest.config.json
@@ -1,7 +1,7 @@
 {
   "globals": {
     "ts-jest": {
-      "tsConfig": "./tsconfig.test.json"
+      "tsconfig": "./tsconfig.test.json"
     }
   },
   "transform": {
